Minor expando.js and CSS improvements v1.0

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -604,6 +604,10 @@ span#notification.fade {
 	color: var(--post-link-hover);
 }
 
+.post a.title:visited:hover {
+	color: #5d5d5d;
+}
+
 .misctainer {
 	float: left;
 	padding: 0 .2em 0 .1em;
