--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -1410,7 +1410,7 @@ a.pure-button.alldarightcomments {
 }
 
 .nobar, .sidebar {
-	background: linear-gradient(0deg,#fff 30%,#e7e7e7 100%);
+	background: linear-gradient(0deg,#fff 30%,#ededed 100%);
 }
 
 .sidebar {
