--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -1933,6 +1933,10 @@ article.pmessage.post.newmsg {
 	margin-left: 31px;
 }
 
+.unseen-comment {
+	background-color: #edf9ff;
+}
+
 .inbox.content {
 	width: 96%;
 }
