--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -610,7 +610,7 @@ span#notification.fade {
 
 .misctainer {
 	float: left;
-	padding: 0 .2em 0 .1em;
+	margin: 0px 3px 0px 1px;
 }
 
 .links a, .pbody, a.slink {
@@ -746,7 +746,7 @@ iframe {
 	height: 70px;
 	text-align: center;
 	position: relative;
-	right: 8px;
+	right: 7px;
 }
 
 .post .thumbnail img {
@@ -3237,7 +3237,7 @@ li.mod-table-header {
     }
 
   .misctainer {
-    padding: 0;
+    margin: 0;
   }
 
   .pbody {
@@ -3291,6 +3291,7 @@ li.mod-table-header {
     box-shadow: 0 3px 5px 0 var(--primary-shadow);
     background-color: #fff;
     position: absolute;
+    margin-top: .5em;
   }
 
   .th-body {
@@ -3516,7 +3517,7 @@ li.mod-table-header {
 /* Small to Medium Screens (max-width: 50.999em) */
 @media screen and (max-width: 50.999em) and (orientation: portrait) {
   .misctainer {
-    padding: 0;
+    margin: 0;
     transform: scale(0.9);
   }
 
