Some CSS improvements and tweaks

--- a/app/static/css/dark.css
+++ b/app/static/css/dark.css
@@ -1074,7 +1074,7 @@ body.dark .downvoted path {
 }
 
 body.dark td.subsentry.subsubscribed {
-  border-left: 4px solid #202225;
+  border-left: 4px solid #5c5c5c;
 }
 
 body.dark .stick {
