--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -1711,8 +1711,8 @@ li.new-item {
 	bottom: 0;
 	left: 0;
 	width: 100%;
-	height: 150px;
-	background: linear-gradient(to bottom, rgba(255,255,255,0), #fff);
+	height: 15em;
+	background: linear-gradient(to bottom, rgba(255,255,255,0) 20%, #fff 100%);
 	pointer-events: none;
 }
 
