Some improvements in site/log.html

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -1938,11 +1938,11 @@ article.pmessage.post.newmsg {
 }
 
 .unseen-comment {
-	background-color: #edf9ff;
+	background-color: #f3fafd;
 }
 
 .prev-unseen-comment {
-	background-color: #edf9ff;
+	background-color: #f3fafd;
 }
 
 .inbox.content {
