Minor "posts only" toggle visuals v1

--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -240,6 +240,10 @@ img[src*='#center'] {
     border-radius: 50%;
 }
 
-.hidden {
+input:checked + .slider:before {
+    background-color: var(--primary-color);
+}
+
+.hiddencomm {
     display: none !important;
 }
